{
  "@@locale": "es",

  "settings": "Ajustes",
  "units": "Unidades",
  "language": "Idioma",
  "languageSystem": "Como el dispositivo",
  "languageEnglish": "English",
  "languageSpanish": "Español",
  "kilograms": "Kilogramos",
...
  "categoryOverhead": "Press sobre cabeza",
  "categoryPull": "Dominadas y remos",
  "categoryClean": "Clean & jerk",
  "categorySnatch": "Snatch",
  "categoryCustom": "Personalizados",

  "exerciseBackSquat": "Sentadilla trasera",
  "exerciseFrontSquat": "Sentadilla frontal",
  "exerciseOverheadSquat": "Overhead Squat",
  "exerciseBoxSquat": "Sentadilla al cajón",
  "exerciseLegPress": "Prensa de piernas",
  "exerciseDeadlift": "Peso muerto",
  "exerciseSumoDeadlift": "Peso muerto sumo",
...
